Favicon and bug fix

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo app</title>
+    <link rel="icon" href="./img/icon.svg" type="image/x-icon" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -20,6 +21,7 @@
         <button id="submit">Create</button>
       </div>
       <div id="part-2">
+        <h3></h3>
         <ol id="list"></ol>
       </div>
       <script src="./js/uuidv4.js"></script>
